cluster/gitops/istio-system/istio/base/allow-ambient-hostprobes-cilium-netpol.yaml
---
# From https://istio.io/latest/docs/ambient/install/platform-prerequisites/#cilium
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ambient-hostprobes
spec:
  description: Allows SNAT-ed kubelet health check probes into ambient pods
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector: {}
  ingress:
    - fromCIDR:
        - 169.254.7.127/32
